# javelin

./: .gitignore  .gitmodules  CMakeLists.txt  justfile  out.md
assets/ocio/acescg_to_srgb/: manifest.json  ocio_shader.glsl
cmake/: cpm.cmake  dependencies.cmake
examples/: CMakeLists.txt
examples/sandbox/: main.cpp
src/: CMakeLists.txt
src/core/: app.cppm  logging.cppm  time.cppm  types.cppm
src/math/: constants.cppm  mat3.cppm  mat4.cppm  quat.cppm  quaternion.cppm  vec2.cppm  vec3.cppm  vec4.cppm
src/physics/: broad_phase.cppm  integrate.cppm  narrow_phase.cppm  physics_system.cppm  publish.cppm  solver.cppm  types.cppm
src/platform/: input.cppm  platform.cppm  window.cppm
src/render/: color.cppm  fly_camera.cppm  pipeline.cppm  render_context.cppm  render_device.cppm  render_system.cppm  render_targets.cppm  types.cppm
src/render/passes/: display_pass.cppm  geometry_pass.cppm  post_pass.cppm  world_grid_pass.cppm
src/scene/: camera.cppm  entity.cppm  physics_view.cppm  pose_channel.cppm  render_view.cppm  scene.cppm  shapes.cppm
tests/: CMakeLists.txt
tools/: aces_transform_generator.py  profile_build.py
tools/ocio/acescg_to_srgb/: example_fullscreen.frag
tools/ocio/acescg_to_srgb/lut_src/: tex2d_0_ocio_reach_m_table_0.npy  tex2d_1_ocio_gamut_cusp_table_0.npy
